2014-03-23  Carl Hetherington  <cth@carlh.net>

	* Version 1.66.6 released.

2014-03-23  Carl Hetherington  <cth@carlh.net>

	* Attempt to fix format string specifier error on Windows.

	* Version 1.66.5 released.

2014-03-22  Carl Hetherington  <cth@carlh.net>

	* Version 1.66.4 released.

2014-03-22  Carl Hetherington  <cth@carlh.net>

	* Allow specification of the video frame rate that a sound file
	was prepared for.

	* Another attempt to fix colour conversion dialog strange behaviour
	on OS X.

2014-03-18  Carl Hetherington  <cth@carlh.net>

	* Version 1.66.3 released.

2014-03-18  Carl Hetherington  <cth@carlh.net>

	* Fix bad rounding of timecodes.

	* Tentative support for 3D from alternate frames of the source.

2014-03-17  Carl Hetherington  <cth@carlh.net>

	* Improve behaviour of the position slider at the end of films.

	* Version 1.66.2 released.

2014-03-17  Carl Hetherington  <cth@carlh.net>

	* Improve appearance of config dialog on OS X.

2014-03-15  Carl Hetherington  <cth@carlh.net>

	* Improve appearance of new film and KDM dialogs on OS X.

	* Fix KDM dialog to predictably set up its initial range to
	a week from now.

	* Remove support for FFmpeg post-processing filters as they apparently
	do not support > 8bpp.  I don't think they are worth the pain of
	quantizing and then telling the user what has happened.

2014-03-12  Carl Hetherington  <cth@carlh.net>

	* Version 1.66.1 released.

2014-03-12  Carl Hetherington  <cth@carlh.net>

	* Hopefully fix i18n on OS X (#324).

2014-03-10  Carl Hetherington  <cth@carlh.net>

	* Version 1.66.0 released.

2014-03-09  Carl Hetherington  <cth@carlh.net>

	* Version 1.65.2 released.

2014-03-09  Carl Hetherington  <cth@carlh.net>

	* Restore old behaviour of "no-stretch" mode with crop.

	* Fix display of no-scale display mode in the player.

2014-03-08  Carl Hetherington  <cth@carlh.net>

	* Version 1.65.1 released.

2014-03-08  Carl Hetherington  <cth@carlh.net>
