@@ -1,3 +1,7 @@
+2014-03-24  Carl Hetherington  <cth@carlh.net>
+
+	* Fix error on creating DCPs without audio.
+
 2014-03-23  Carl Hetherington  <cth@carlh.net>
 
 	* Version 1.66.6 released.
